[package]
name = "salvo-sse-gzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {version = "0.37.9", features = ["sse", "logging", "compression"]}
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.12"
uuid = {version = "1.3.2", features = ["v4"]}
async-std = "1.12.0"


[profile.release]
lto = true
opt-level = 3