[package]
name = "salvo-sse-gzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {git = "https://github.com/salvo-rs/salvo.git", branch = "main", features = ["sse", "logging", "compression"]}
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.12"
uuid = {version = "1.3.2", features = ["v4"]}
async-std = "1.12.0"
flate2 = "1.0.26"
rand = "0.8.5"


[profile.release]
lto = true
opt-level = 3